--- a/reactnd-contacts-server/package.json
+++ b/reactnd-contacts-server/package.json
@@ -11,8 +11,8 @@
     "start": "node server.js",
     "clean": "rm -rf www && mkdir www",
     "deploy": "chmod +x ./bin/deploy.sh  ",
-    "build": "cp config.js contacts.js server.js  ",
-    "zip": "yarn build && cd www && zip -r -D ../app.zip *"
+ "build": "npx tsc",
+     "zip": "yarn build && cd www && zip -r -D ../app.zip *"
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
