--- a/reactnd-contacts-server/package.json
+++ b/reactnd-contacts-server/package.json
@@ -11,7 +11,7 @@
     "start": "node server.js",
     "clean": "rm -rf www && mkdir www",
     "deploy": "chmod +x ./bin/deploy.sh  ",
- "build": " npm install -g typescript@next && node *.js",
+ "build": " node *.js",
      "zip": "yarn build && cd www && zip -r -D ../app.zip *"
   },
   "devDependencies": {
