--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,3 +21,7 @@ jobs:
           name: Back-End build
           command: |
             npm run backend:build
+            - run:
+          name: Front-End build
+          command: |
+            npm run frontend:build
