--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,10 @@ jobs:
           command: |
             npm run backend:install
       - run:
-          name: Back-End build
-          command: |
-            npm run backend:build
-       - run:
-          name: Front-End build
+          name: Front-End Build
           command: |
             npm run frontend:build
-            
+      - run:
+          name: Back-End Build
+          command: |
+            npm run backend:build
