--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.1
 jobs:
   build:
-    filters:
-    branches:
+    - filters:
+    - branches:
       - only: /main\/.*/
     docker:
       - image: "cimg/base:stable"
