--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,11 @@ version: 2.1
 orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
-  build:
   jobs:
-    - test:
+    build-test-and-push:
       filters:
         branches:
-          only:
-           - main
+          only: main
     docker:
       - image: "cimg/base:stable"
     steps:
