--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.1
   build:
   jobs:
-    build-test-and-push:
+    test-and-push:
       filters:
         branches:
           only: main
