--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,10 @@
-workflows:
 version: 2.1
+basic-workflow:
 orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
-  build:
   jobs:
-    test-and-push:
+    build:
       filters:
         branches:
           only: main
