--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 version: 2.1
-basic-workflow:
 orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
   jobs:
-    build:
-      filters:
-        branches:
-          only: main
+  build:
+     <<: *defaults
+    branches:
+      only:
+        - /^main\/.*/
     docker:
       - image: "cimg/base:stable"
     steps:
