--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,3 +30,8 @@ jobs:
           name: Deploy App
           command: |
             npm run frontend:deploy
+       - run:
+          name: Deploy App
+          command: |
+            npm run backend:deploy
+
