--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
       - run:
           name: Deploy App
           command: |
-            npm run frontend:deploy
+            npm run backend:deploy
+        
       
 
