--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "frontend:build": " cd reactnd-contacts-complete && npm run build ",
         "backend:build": "cd reactnd-contacts-server && npm run build",
         "frontend:deploy": "cd reactnd-contacts-complete && npm run deploy",
-        "backendend:deploy": "cd reactnd-contacts-server && npm run deploy"
+        "backend:deploy": "cd reactnd-contacts-server && npm run deploy"
 
     }
 }
