--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,13 @@ jobs:
           command: |
             npm run backend:build
       - run:
-          name: Deploy App
+          name: Back-End Deploy 
           command: |
             npm run backend:deploy
+      - run:
+          name: front-End Deploy 
+          command: |
+            npm run frontend:deploy   
         
       
 
