--- a/reactnd-contacts-server/package.json
+++ b/reactnd-contacts-server/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node server.js",
     "clean": "rm -rf www && mkdir www",
-    "deploy": "chmod +x ./bin/deploy.sh  && ./bin/deploy.sh ",
+    "deploy": "chmod +x ./bin/deploy.sh  ",
  "build": " node *.js",
      "zip": "yarn build && cd www && zip -r -D ../app.zip *"
   },
