--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.1
 jobs:
   build:
+    branches:
+    include:
+    - master
     docker:
       - image: "cimg/base:stable"
     steps:
