--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,10 @@ orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
 jobs:
-  build:
+  - build:
+    filters:
     branches:
-    include:
-    - master
+    only: main
     docker:
       - image: "cimg/base:stable"
     steps:
