--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,9 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.1
 jobs:
    build:
-    - filters:
-      branches:
-      only: main
+    filters:
+     branches:
+     only: main
     docker:
       - image: "cimg/base:stable"
     steps:
