--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,7 @@ jobs:
    push:
      filters:
        branches:
-        only:
-               - main
+        only: main
     docker:
       - image: "cimg/base:stable"
     steps:
