--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,10 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.1
 jobs:
    - build
-      - tests:
-          requires:
-            - build
-      - release:
-          requires:
-            - tests
+      - push:
           filters:
-            tags:
-              only: /^v.*$/
+            branches:
+              only: /main\/.*/
     docker:
       - image: "cimg/base:stable"
     steps:
