--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,11 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.1
 build-deploy:
 jobs:
-    - js_build
-      - push: 
+     - js_build
+      - build_server_pdfs: # << the job to conditionally run based on the filter-by-branch-name.
           filters:
             branches:
-              only: /main\/.*/
+              only: /master\/.*/
     docker:
       - image: "cimg/base:stable"
     steps:
