--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.1
 build-deploy:
 jobs:
-    - build:
+    build:
           filters:
             branches:
               only: main
