--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,13 @@ version: 2.1
 orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
+  heroku: circleci/heroku@1.2.6
 build-deploy:
 jobs:
-    build:
+      - build
+      - heroku/deploy-via-git: # Use the pre-configured job, deploy-via-git
+          requires:
+            - build
           filters:
             branches:
               only: main
