--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ jobs:
             - build
           filters:
             branches:
-              only: main
+              only: 
+              main
   jobs:
   build:
     docker:
