--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,7 @@ jobs:
             - build
           filters:
             branches:
-              only: 
-              main
+              only: main
   jobs:
   build:
     docker:
