--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
@@ -12,6 +12,7 @@ jobs:
           filters:
             branches:
               only: main
+build-test:
 jobs:
   build:
     docker:
