--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,7 @@ jobs:
           filters:
             branches:
               only: main
-build-test:
-  build:
+-build-test:
     docker:
       - image: "cimg/base:stable"
     steps:
