--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           filters:
             branches:
             only: /main\/.*/
-    docker:
+    - docker:
       - image: "cimg/base:stable"
     steps:
       - node/install
