--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           filters:
             branches:
             only: /main\/.*/
-jobs:
+jobs-test:
     docker:
       - image: "cimg/base:stable"
     steps:
