--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,12 @@ version: 2.1
 orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
-jobs:
-  build:
+ jobs:
+      - js_build
+      - build: 
+          filters:
+            branches:
+              only: /main\/.*/
     docker:
       - image: "cimg/base:stable"
     steps:
