--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,9 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.1
 jobs:
   build:
-      - filters:
+       filters:
         branches:
-        only: /main\/.*/
+        - only: /main\/.*/
     docker:
       - image: "cimg/base:stable"
     steps:
