--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - filters:
         branches:
         only: /main\/.*/
-    docker:
+   - docker:
       - image: "cimg/base:stable"
     steps:
       - node/install
