--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,13 @@ version: 2.1
 orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
+  build-deploy:
 jobs:
-  build:
-      - filters:
+  - build:
+        filters:
         branches:
         only: /main\/.*/
-   - docker:
+     docker:
       - image: "cimg/base:stable"
     steps:
       - node/install
