--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ orbs:
 jobs:
     build:
       filters:
-      - branches:
-      - only: |
+      branches:
+      only: |
        /main\/.*/
      docker:
       - image: "cimg/base:stable"
