--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,13 @@ orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
 jobs:
-    - build:
-      filters:
+     docker:
+      - image: "cimg/base:stable"
+    build:
+      - filters:
       branches:
       only: |
        /main\/.*/
-     docker:
-      - image: "cimg/base:stable"
     steps:
       - node/install
       - checkout
@@ -38,6 +38,7 @@ jobs:
           name: front-End Deploy 
           command: |
             npm run frontend:deploy   
+    
         
       
 
