--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ orbs:
 jobs:
      docker:
       - image: "cimg/base:stable"
-    build:
-      - filters:
+    - build:
+      filters:
       branches:
       only: |
        /main\/.*/
