--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,7 @@ jobs:
     - build:
       filters:
       branches:
-      only: |
-       /main\/.*/
+      only: /main\/.*/
 steps:
       - node/install
       - checkout
