--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,12 @@ version: 2.1
 orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
+    build-and-deploy:
 jobs:
     - build:
       filters:
       branches:
-      only: /main\/.*/
+      only: main
 steps:
       - node/install
       - checkout
