--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,11 @@ version: 2.1
 orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
-build-and-deploy:
 jobs:
-      - build:
-         filters:
-         branches:
-         only: main
-steps:
+  build:
+    docker:
+      - image: "cimg/base:stable"
+    steps:
       - node/install
       - checkout
       - aws-cli/setup
@@ -36,7 +34,6 @@ steps:
           name: front-End Deploy 
           command: |
             npm run frontend:deploy   
-    
         
       
 
