--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,14 @@
 version: 2.1
-orbs:
-  node: circleci/node@4.1.0
-  aws-cli: circleci/aws-cli@1.3.1
+workflows:
+  version: 2
+  testing-workflow:
+    jobs:
+      - build:
+          context: testing
+          filters:
+            branches:
+              only: 
+                - main
 jobs:
   build:
     docker:
