--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,14 @@ orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
 workflows:
+  version: 2
+  building-workflow:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: 
+                - main
 jobs:
   build:
     docker:
@@ -35,14 +43,6 @@ jobs:
           name: front-End Deploy 
           command: |
             npm run frontend:deploy   
- version: 2
-  testing-workflow:
-    jobs:
-      - build:
-          context: testing
-          filters:
-            branches:
-              only: 
-                - main        
+        
       
 
