--- a/reactnd-contacts-complete/package.json
+++ b/reactnd-contacts-complete/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
     "form-serialize": "^0.7.2",
+    "jasmine": "^4.0.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -13,7 +14,8 @@
   },
   "devDependencies": {
     "react-scripts": "1.0.7",
-     "form-serialize": "^0.7.2",
+    "form-serialize": "^0.7.2",
+    "jasmine": "^4.0.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -21,8 +23,10 @@
     "sort-by": "^1.2.0"
   },
   "scripts": {
-    "start":"react-scripts start",
+    "start": "react-scripts start",
     "deploy": "chmod +x ./bin/deploy.sh ",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "jasmine": "jasmine",
+    "test": " npm run build && npm run jasmine"
   }
 }
