--- a/reactnd-contacts-complete/public/manifest.json
+++ b/reactnd-contacts-complete/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "http://demobucket1235.s3-website-us-east-1.amazonaws.com/",
+  "start_url": "http://demoapp12345.s3-website-us-east-1.amazonaws.com//",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
